# agentic-text2sql

./: A2A_INTEGRATION_README.md  A2A_SDK_CONVERSION_README.md  A2A_SDK_INSTALLATION.md  A2A_SDK_INTEGRATION_README.md  MULTI_DATABASE_KERBEROS_README.md  README.md  a2a_agent_card_sdk.py  a2a_agent_executor.py  a2a_agent_server.py  a2a_message_handler.py  a2a_schemas.py  a2a_task_manager.py  a2a_test_client.py  agent.py  agent_card.py  agent_tools.py  clients.py  config.py  environment.template  main.py  project_summary.md  pyproject.toml  requirements.txt  schema_introspection.py  schemas.py  test_a2a_api.py  test_a2a_sdk_client.py  test_a2a_sdk_unit.py  test_api.py  test_multi_database_example.py
