[project]
name = "agentic-text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.11",
    "asyncio-pool>=0.6.0",
    "fastapi>=0.116.0",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "neo4j>=5.28.1",
    "oracledb>=3.2.0",
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "sse-starlette>=2.4.1",
    "uvicorn>=0.35.0",
]
